--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="honeydew">#F0FFF0</color>
+    <color name="light_steel_blue">#B0C4DE</color>
+    <color name="medium_aquamarine">#66CDAA</color>
 </resources>
